--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-darkgray border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-page="/Index">My 1st web project</a>
+                <a class="navbar-brand" asp-page="/Index">TAYFUN'S PORTFOLIO</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,9 +30,7 @@
                         <li class="nav-item mx-1">
                             <a class="nav-btn" asp-page="/Bio">Bio</a>
                         </li>
-                        <li class="nav-item mx-1">
-                            <a class="nav-btn" asp-page="/Education">Education</a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
